fix border-radius on mobile

--- a/src/pages/apps/_styles/index.module.scss
+++ b/src/pages/apps/_styles/index.module.scss
@@ -36,6 +36,10 @@
 			top: -0.375rem;
 			border-radius: .5rem;
 			pointer-events: none;
+
+			@media (hover: none) {
+				border-radius: 1.75rem;
+			}
 		}
 
 		&:focus-visible {
